Restore functionality for generateAppForLink

It turns out the dominant color codepath was still in use. If you drag
a link to the NTP, it will use the favicon and a dominant color stripe
for the app (link) it creates.

ExtensionIconSource::GetIconURL will always return a valid URL but it
may be for a default icon. IconsInfo::GetIconURL will return an empty
URL if a non-default icon is not available.

Bug: 749889
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I014f974e9e2bf662313ae8c118915ae8fd6b125e