chrome/browser/ui/webui/app_launcher_page_ui.cc
@@ -15,6 +15,7 @@
 #include "chrome/browser/ui/webui/ntp/app_launcher_handler.h"
 #include "chrome/browser/ui/webui/ntp/app_resource_cache_factory.h"
 #include "chrome/browser/ui/webui/ntp/core_app_launcher_handler.h"
+#include "chrome/browser/ui/webui/ntp/favicon_webui_handler.h"
 #include "chrome/browser/ui/webui/ntp/ntp_resource_cache.h"
 #include "chrome/browser/ui/webui/theme_handler.h"
 #include "chrome/common/url_constants.h"
@@ -46,6 +47,7 @@ AppLauncherPageUI::AppLauncherPageUI(content::WebUI* web_ui)
     DCHECK(service);
     web_ui->AddMessageHandler(base::MakeUnique<AppLauncherHandler>(service));
     web_ui->AddMessageHandler(base::MakeUnique<CoreAppLauncherHandler>());
+    web_ui->AddMessageHandler(base::MakeUnique<FaviconWebUIHandler>());
     web_ui->AddMessageHandler(base::MakeUnique<MetricsHandler>());
   }
 
