chrome/browser/resources/ntp4/apps_page.js
@@ -260,7 +260,12 @@ cr.define('ntp', function() {
 
       this.className = 'app focusable';
 
-      this.appContents_ = $('app-icon-template').cloneNode(true);
+      if (!this.appData_.icon_big_exists && this.appData_.icon_small_exists)
+        this.useSmallIcon_ = true;
+
+      this.appContents_ = (this.useSmallIcon_ ? $('app-small-icon-template') :
+                                                $('app-large-icon-template'))
+                              .cloneNode(true);
       this.appContents_.id = '';
       this.appendChild(this.appContents_);
 
@@ -269,8 +274,16 @@ cr.define('ntp', function() {
       this.appImg_ = this.appImgContainer_.querySelector('img');
       this.setIcon();
 
-      this.addLaunchClickTarget_(this.appImgContainer_);
-      this.appImgContainer_.title = this.appData_.full_name;
+      if (this.useSmallIcon_) {
+        this.imgDiv_ =
+            /** @type {HTMLElement} */ (this.querySelector('.app-icon-div'));
+        this.addLaunchClickTarget_(this.imgDiv_);
+        this.imgDiv_.title = this.appData_.full_name;
+        chrome.send('getAppIconDominantColor', [this.id]);
+      } else {
+        this.addLaunchClickTarget_(this.appImgContainer_);
+        this.appImgContainer_.title = this.appData_.full_name;
+      }
 
       // The app's full name is shown in the tooltip, whereas the short name
       // is used for the label.
@@ -301,6 +314,14 @@ cr.define('ntp', function() {
     },
 
     /**
+     * Sets the color of the favicon dominant color bar.
+     * @param {string} color The css-parsable value for the color.
+     */
+    set stripeColor(color) {
+      this.querySelector('.color-stripe').style.backgroundColor = color;
+    },
+
+    /**
      * Removes the app tile from the page. Should be called after the app has
      * been uninstalled.
      *
@@ -322,7 +343,8 @@ cr.define('ntp', function() {
      * to load icons until we have to).
      */
     setIcon: function() {
-      var src = this.appData_.icon;
+      var src = this.useSmallIcon_ ? this.appData_.icon_small :
+                                     this.appData_.icon_big;
       if (!this.appData_.enabled ||
           (!this.appData_.offlineEnabled && !navigator.onLine)) {
         src += '?grayscale=true';
@@ -356,7 +378,20 @@ cr.define('ntp', function() {
     setBounds: function(size, x, y) {
       var imgSize = size * APP_IMG_SIZE_FRACTION;
       this.appImgContainer_.style.width = this.appImgContainer_.style.height =
-          toCssPx(imgSize);
+          toCssPx(this.useSmallIcon_ ? 16 : imgSize);
+      if (this.useSmallIcon_) {
+        // 3/4 is the ratio of 96px to 128px (the used height and full height
+        // of icons in apps).
+        var iconSize = imgSize * 3 / 4;
+        // The -2 is for the div border to improve the visual alignment for the
+        // icon div.
+        this.imgDiv_.style.width = this.imgDiv_.style.height =
+            toCssPx(iconSize - 2);
+        // Margins set to get the icon placement right and the text to line up.
+        this.imgDiv_.style.marginTop = this.imgDiv_.style.marginBottom =
+            toCssPx((imgSize - iconSize) / 2);
+      }
+
       this.style.width = this.style.height = toCssPx(size);
       this.style.left = toCssPx(x);
       this.style.right = toCssPx(x);
